--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.10.0
   geocoding: ^3.0.0
+  geolocator: ^13.0.2
+  http: ^1.3.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
