--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
+    - maptheme/night_theme.json
+    - maptheme/retro_theme.json
+    - maptheme/silver_theme.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
